--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: ^0.7.2+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   select_form_field: ^2.2.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
