--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   select_form_field: ^2.2.0
+  date_field: ^3.0.5
   
 dev_dependencies:
   flutter_test:
