--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   date_field: ^3.0.5
   provider: ^6.0.5
   shared_preferences: ^2.0.0
+  permission_handler: ^9.0.1
+  file_picker: ^4.6.1
+  pdfx: ^2.0.1+1
+  
   
 dev_dependencies:
   flutter_test:
