--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,9 @@ dependencies:
   shared_preferences: ^2.0.0
   permission_handler: ^9.0.1
   file_picker: ^4.6.1
-  pdfx: ^2.0.1+1
+  #pdfx: ^2.0.1+1
   http: ^0.13.5
+  syncfusion_flutter_charts: ^24.1.43+1
   
   
 dev_dependencies:
