--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,18 @@ dependencies:
   date_field: ^3.0.5
   provider: ^6.0.5
   shared_preferences: ^2.0.0
-  permission_handler: ^9.0.1
-  file_picker: ^4.6.1
+ # permission_handler: ^9.0.1
+ # file_picker: ^4.6.1
   #pdfx: ^2.0.1+1
   http: ^0.13.5
   syncfusion_flutter_charts: ^24.1.43+1
+  permission_handler: ^11.1.0
+  firebase_storage: ^11.6.0
+  firebase_core: ^2.24.2
+  file_picker: ^6.1.1
+  flutter_staggered_grid_view: ^0.7.0
+  #firebase_core: ^2.24.2
+  #pdfx: ^2.3.0
   
   
 dev_dependencies:
