--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   firebase_core: ^2.24.2
   file_picker: ^6.1.1
   flutter_staggered_grid_view: ^0.7.0
+  go_router: ^13.0.1
+  firebase_auth: ^4.16.0
+  flutter_carousel_widget: ^2.2.0
   #firebase_core: ^2.24.2
   #pdfx: ^2.3.0
   
@@ -95,12 +98,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Regular.ttf
+        - asset: fonts/Roboto-Italic.ttf
+        
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
