--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   go_router: ^13.0.1
   firebase_auth: ^4.16.0
   flutter_carousel_widget: ^2.2.0
+  google_mlkit_text_recognition: ^0.11.0
   #firebase_core: ^2.24.2
   #pdfx: ^2.3.0
   
